# octobroker

./: Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml  e2e.yml  release-pr.yml  release.yml  tag-on-merge.yml
docs/: DESIGN.md
ghp/: Cargo.toml
ghp/src/: main.rs
scripts/: e2e-mcp.sh
src/: app_token.rs  audit.rs  cache.rs  config.rs  main.rs  mcp.rs  policy.rs
testdata/: README.md  test-app-key.pem
