[package]
name = "ghpool"
version = "0.3.4"
edition = "2021"
description = "Internal GitHub API proxy with PAT pooling and caching"
license = "MIT"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
serde_json = "1.0"
sha2 = "0.10"
# RS256 JWT signing for GitHub App authentication (App backend, #17 2b)
jsonwebtoken = "9.3"
futures-util = { version = "0.3", default-features = false }
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
